[tool.poetry]
name = "family-budget-bot"
version = "0.1.0"
description = "Telegram bot for family budget management"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
asyncpg = "^0.29.0"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.21.1"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"